Fixed contrast for 'Collapsing Console Sections' Plugin

--- a/less/style.less
+++ b/less/style.less
@@ -235,6 +235,15 @@ table.progress-bar {
   padding: 10px 20px;
 }
 
+div.collapseHeader {
+  background-color: @console-white;
+  color: @console-black;
+}
+
+div.collapseAction p {
+  color: @console-white !important;
+}
+
 .ace_editor {
   font: 12px/normal 'Roboto Mono', Menlo, monospace;
 }
